# Freelance_Time_Tracker_pet

./: .env_exmp  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: style.yaml  tests.yaml
freelance_time_tracker/: manage.py  pytest.ini
freelance_time_tracker/clients/: admin.py  models.py  urls.py  views.py
freelance_time_tracker/clients/api/: serializers.py  urls.py
freelance_time_tracker/clients/migrations/: 0001_initial.py  0002_initial.py  0003_client_unique_client_name_for_user.py
freelance_time_tracker/freelance_time_tracker/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
freelance_time_tracker/time_tracking/: admin.py  models.py  tasks.py  urls.py  views.py
freelance_time_tracker/time_tracking/migrations/: 0001_initial.py  0002_invoice_invoicetimeentry.py
freelance_time_tracker/users/: admin.py  models.py  tests.py  urls.py  views.py
freelance_time_tracker/users/api/: serializers.py  urls.py
freelance_time_tracker/users/migrations/: 0001_initial.py
scripts/: create_superuser.py
